# vex-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci-python.yml  ci-typescript.yml  release-npm.yml  release.yml
docs/: DEVELOPMENT_PLAN.md  SDK_FINAL_AUDIT_REPORT.md  SDK_POLISH_PR.md  attest.md
python/: CI_TRIGGER.md  README.md  pyproject.toml
python/provn_vex_sdk/: __init__.py  agent.py  builder.py  decorators.py
python/tests/: test_agent.py  test_binary_parity.py  test_hardening.py  test_parity.py
typescript/: CI_TRIGGER.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
typescript/src/: agent.ts  builder.ts  index.ts  middleware.ts
typescript/tests/: agent.test.ts  binary_parity.test.ts  parity.test.ts
