[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "provn-vex-sdk"
version = "1.5.0"
authors = [
  { name="Quinten Stroobants", email="quinten@provn.ai" },
]
description = "High-level routing and cognitive abstraction SDK for the VEX Protocol"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "provn-sdk>=0.3.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "jcs>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
